2019-1/231/users/4234/executions/1719_2496.log
== TEST (2019-05-14 18:23:13) 
-- CODE:
num = int(input("digite um numero: "))
print(num)
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:23:46) 
-- CODE:
num = int(input("Digite um numero: "))
print(num)
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:23:52) 
-- CODE:
num = int(input("Digite um numero: "))
print(num)
-- EXECUTION TIME:
0.142289
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:41:06) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x <= 0)
print(while)
-- ERROR:
File "XXXX", line 4
    while (x <= 0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:41:15) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x <= 0)
print(while)
-- EXECUTION TIME:
0.178609
-- ERROR:
  File "/home/codebench/codes/1719/2496/main.py", line 4
    while (x <= 0)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:41:31) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x <= 10)
print(while)
-- ERROR:
File "XXXX", line 4
    while (x <= 10)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:41:43) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x<=10)
print(while)
-- ERROR:
File "XXXX", line 4
    while (x<=10)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:41:45) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x<=10)
print(while)
-- EXECUTION TIME:
0.151528
-- ERROR:
  File "/home/codebench/codes/1719/2496/main.py", line 4
    while (x<=10)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:42:59) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 10)
print(while)
-- ERROR:
File "XXXX", line 4
    while (x < 10)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:43:47) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5)
print(while)
-- ERROR:
File "XXXX", line 4
    while (x < 5)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:43:56) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while(x < 5)
print(while)
-- ERROR:
File "XXXX", line 4
    while(x < 5)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:45:10) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(while)
-- ERROR:
File "XXXX", line 5
    print(while)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:45:24) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
print(while)
-- ERROR:
File "XXXX", line 5
    print(while)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:45:48) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
print(x)
-- ERROR:
File "XXXX", line 5
    print(x)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:45:50) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
print(x)
-- ERROR:
File "XXXX", line 5
    print(x)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:46:01) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(x)
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:46:06) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(x)
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:46:08) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(x)
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:47:52) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(x)
	x = x + 1
-- OUTPUT:
0
1
2
3
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:49:37) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(x)
	x = x + 1
	
num = int(input("Digite um numero: "))
-- OUTPUT:
0
1
2
3
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:49:46) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(x)
	x = x + 1
	
num = int(input("Digite um numero: "))
-- EXECUTION TIME:
0.626745
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
1
2
3
4
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
1
2
3
4
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
0
1
2
3
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:50:09) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(x)
	x = x + 1
	
num = int(input("Digite um numero: "))
-- OUTPUT:
0
1
2
3
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:51:44) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (num != -1):

	x = x + num
	
	num = int(input("Digite um numero: "))
print(x)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:52:20) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (num != -1):

	x = x + num
	
	num = int(input("Digite um numero: "))
print(x)
-- EXECUTION TIME:
0.688346
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:04:03) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(x)
-- EXECUTION TIME:
1077.62
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:05:03) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(x)
-- EXECUTION TIME:
1132.32
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:05:03) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (x < 5):
	print(x)
-- EXECUTION TIME:
1134.23
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:42:17) 
-- CODE:
num = int(input("Digite um numero: "))

x = 0
while (num != -1):

	x = x + num
	
	num = int(input("Digite um numero: "))
print(x)
-- EXECUTION TIME:
0.153645
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
